Add console log for speech synthesis voices
Log available speech synthesis voices to the console.

--- a/practise/index.html
+++ b/practise/index.html
@@ -79,6 +79,7 @@ speedSlider.addEventListener('input', () => {
 let voices = [];
 speechSynthesis.onvoiceschanged = () => {
     voices = speechSynthesis.getVoices();
+    console.log(voices);
 };
 
 function speak(text) {
