--- a/practise/index.html
+++ b/practise/index.html
@@ -1,8 +1,16 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
+<base href="/">
 <meta charset="UTF-8">
 <title>Language Conversation Practice</title>
+<link rel="icon" href="img/favicon/favicon.ico" sizes="any">
+<link rel="icon" href="img/favicon/favicon.svg" type="image/svg+xml">
+<link rel="apple-touch-icon" href="img/favicon/apple-touch-icon.png">
+<link rel="manifest" href="img/favicon/site.webmanifest">
+<link rel="stylesheet" href="css/toast.css">
+<link rel="stylesheet" href="css/main.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 <style>
 body { font-family: sans-serif; max-width: 600px; margin: 20px auto; }
 #controls { margin-bottom: 10px; }
@@ -18,32 +26,90 @@ button { padding: 5px 10px; font-size: 1em; margin-left: 5px; }
 </head>
 <body>
 
-<h1 id="page-title">Language Conversation Practice</h1>
+<header>
+    <a href="index.html"><img src="img/top_logo_light.png" alt="TEFinitely Logo" class="logo"></a>
+</header>
+<div id="toast-container"></div>
+<nav class="main-nav" id="user-status" style="display: none;">
+    <button class="hamburger-menu" id="hamburger-menu" aria-label="Toggle menu" aria-expanded="false">
+        <i class="bi bi-list"></i>
+    </button>
+    <div class="nav-content" id="nav-content">
+        <div class="nav-links">
+            <div class="dropdown">
+                <a href="oral_expression.html" class="dropbtn">Oral Expression</a>
+                <div class="dropdown-content">
+                    <a href="oral_expression_section_a.html">Section A</a>
+                    <a href="oral_expression_section_b.html">Section B</a>
+                </div>
+            </div>
+            <a href="training.html">Phased Training</a>
+            <a href="practise/index.html">Conversation Practice</a>
+            <a href="profile.html">Profile</a>
+            <a id="admin-link" href="admin.html" style="display: none;">Admin Portal</a>
+        </div>
+        <div class="nav-user">
+            <span id="first-name-display"></span>
+            <button id="logoutBtn">Logout</button>
+        </div>
+    </div>
+</nav>
 
-<div id="controls">
-    <label id="lang-label">Langue:</label> 
-    <select id="language">
-        <option value="fr" selected>Français</option>
-        <option value="en">English</option>
-    </select>
-    <label id="level-label">Niveau:</label> 
-    <select id="level"></select>
-    <button id="start-btn">Démarrer</button>
-    <div id="speed-container">
-        <span id="speed-label">Vitesse de parole:</span> 
-        <span id="speed-value">1.0</span>
-        <input type="range" id="speech-speed" min="0.5" max="1.2" value="1" step="0.05">
+<div id="main-content">
+    <h1 id="page-title">Language Conversation Practice</h1>
+
+    <div id="controls">
+        <label id="lang-label">Langue:</label> 
+        <select id="language">
+            <option value="fr" selected>Français</option>
+            <option value="en">English</option>
+        </select>
+        <label id="level-label">Niveau:</label> 
+        <select id="level"></select>
+        <button id="start-btn">Démarrer</button>
+        <div id="speed-container">
+            <span id="speed-label">Vitesse de parole:</span> 
+            <span id="speed-value">1.0</span>
+            <input type="range" id="speech-speed" min="0.5" max="1.2" value="1" step="0.05">
+        </div>
+    </div>
+
+    <div id="chat"></div>
+
+    <div id="input-area">
+        <input type="text" id="user-input" placeholder="Tapez votre phrase ici..." />
+        <button id="send-btn">Envoyer</button>
+        <button id="speak-btn">🎤 Parler</button>
     </div>
 </div>
 
-<div id="chat"></div>
+<footer class="landing-footer">
+    <div class="footer-grid">
+        <div class="footer-column">
+            <img src="img/top_logo_light.png" alt="TEFinitely Logo" class="footer-logo">
+            <p>Your guide to succeeding on the TEF Canada exam.</p>
+        </div>
+        <div class="footer-column">
+            <h4>Quick Links</h4>
+            <ul>
+                <li><a href="oral_expression.html">Oral Expression</a></li>
+                <li><a href="training.html">Phased Training</a></li>
+                <li><a href="profile.html">Profile</a></li>
+            </ul>
+        </div>
+        <div class="footer-column">
+            <h4>Contact</h4>
+            <p>Email us at<br><a href="mailto:support@tefinitely.com">support@tefinitely.com</a></p>
+        </div>
+    </div>
+    <div class="footer-bottom">
+        <p>© 2025 TEFinitely.ca | All Rights Reserved</p>
+    </div>
+</footer>
 
-<div id="input-area">
-    <input type="text" id="user-input" placeholder="Tapez votre phrase ici..." />
-    <button id="send-btn">Envoyer</button>
-    <button id="speak-btn">🎤 Parler</button>
-</div>
-
+<script src="js/toast.js"></script>
+<script src="js/auth.js"></script>
+<script src="js/nav.js"></script>
 <script>
 const chatContainer = document.getElementById('chat');
 const inputField = document.getElementById('user-input');
@@ -227,7 +293,7 @@ async function startSession(level, language) {
     setupRecognition(language);
     unlockTTS();
 
-    const res = await fetch('api/start_session.php', {
+    const res = await fetch('practise/api/start_session.php', {
         method: 'POST',
         headers: {'Content-Type': 'application/x-www-form-urlencoded'},
         body: 'level=' + encodeURIComponent(level) + '&language=' + encodeURIComponent(language)
@@ -253,7 +319,7 @@ async function sendMessage() {
     speakButton.disabled = true;
     unlockTTS();
 
-    const res = await fetch('api/continue_session.php', {
+    const res = await fetch('practise/api/continue_session.php', {
         method: 'POST',
         headers: {'Content-Type': 'application/x-www-form-urlencoded'},
         body: 'text=' + encodeURIComponent(text) + '&language=' + encodeURIComponent(languageSelector.value)
